Update contact popover translations

--- a/apps/store/public/locales/en/memberArea.json
+++ b/apps/store/public/locales/en/memberArea.json
@@ -11,6 +11,7 @@
   "PAYMENTS_DISCOUNT_LABEL": "Discount",
   "PAYMENTS_FREE_UNTIL": "Free until",
   "PAYMENTS_MONTLY_COST": "Monthly cost",
+  "PAYMENTS_MONTLY_COST_copy": "Monthly cost",
   "PAYMENTS_PAYMENT_CONNECTED": "Connected",
   "PAYMENTS_PAYMENT_NOT_CONNECTED": "Not connected",
   "PAYMENTS_TOTAL_LABEL": "Total"
