--- a/apps/store/public/locales/sv-se/memberArea.json
+++ b/apps/store/public/locales/sv-se/memberArea.json
@@ -11,6 +11,7 @@
   "PAYMENTS_DISCOUNT_LABEL": "Rabatt",
   "PAYMENTS_FREE_UNTIL": "Gratis till och med",
   "PAYMENTS_MONTLY_COST": "Månadskostnad",
+  "PAYMENTS_MONTLY_COST_copy": "Månadskostnad",
   "PAYMENTS_PAYMENT_CONNECTED": "Betalning kopplad",
   "PAYMENTS_PAYMENT_NOT_CONNECTED": "Ingen betalning kopplad",
   "PAYMENTS_TOTAL_LABEL": "Totalt"
