styles(ProductReviews): design tweaks

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -47,10 +47,10 @@
   "PRODUCT_REVIEWS_TAB_LABEL": "Reviews ({{score}})",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
-  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Based on {{count}} review",
-  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Based on {{count}} reviews",
-  "REVIEWS_COUNT_LABEL_one": "{{count}} review",
-  "REVIEWS_COUNT_LABEL_other": "{{count}} reviews",
+  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Based on {{reviewsCount}} review",
+  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Based on {{reviewsCount}} reviews",
+  "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} review",
+  "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} reviews",
   "REVIEW_COMMENTS_READ_MORE": "Read more",
   "SELECT_INSURANCE": "Select insurance",
   "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
