--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -44,10 +44,10 @@
   "PRODUCT_REVIEWS_TAB_LABEL": "Omdömen ({{score}})",
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "READ_MORE": "Läs mer",
-  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Baserat på {{count}} omdöme",
-  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Baserat på {{count}} omdömen",
-  "REVIEWS_COUNT_LABEL_one": "{{count}} omdöme",
-  "REVIEWS_COUNT_LABEL_other": "{{count}} omdömen",
+  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Baserat på {{reviewsCount}} omdöme",
+  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Baserat på {{reviewsCount}} omdömen",
+  "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
+  "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
   "REVIEW_COMMENTS_READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} omdömen",
