chore: update translations

--- a/apps/store/public/locales/en/purchase-form.json
+++ b/apps/store/public/locales/en/purchase-form.json
@@ -109,9 +109,12 @@
   "OPEN_PRICE_CALCULATOR_BUTTON": "See your price",
   "PRESENT_OFFER_EDIT_BUTTON": "Edit your info",
   "PRICE_CALCULATOR_SECTION_EDIT_BUTTON": "Edit",
-  "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED": "This car has been decommissioned",
-  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER": "You are not the owner of this car",
-  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED": "You are not the owner of this car and the car is decommissioned",
+  "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned",
+  "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_MESSAGE": "This car has been decommissioned",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned and you are not the owner of the car",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_MESSAGE": "You are not the owner of this car {{regNumber}} and the car is decommissioned",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_HEADER": "You are not the owner",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_MESSAGE": "You are not the owner of this car",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_SUBTITLE": "We could not match your current price",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_TITLE": "You pay {{amount}} at {{company}}",
   "PRICE_MATCH_BUBBLE_SUCCESS_SUBTITLE": "compared to {{company}}",
