--- a/apps/store/public/locales/en/contact-us.json
+++ b/apps/store/public/locales/en/contact-us.json
@@ -8,5 +8,5 @@
   "FAQ_OPTION_LABEL": "FAQ",
   "FAQ_OPTION_VALUE": "Open in new tab",
   "TELEPHONE_OPTION_LABEL": "Phone",
-  "TELEPHONE_OPTION_VALUE": "010 45 99 200"
+  "TELEPHONE_OPTION_VALUE": "+46 10 45 99 200"
 }
