--- a/apps/store/public/locales/sv-se/contact-us.json
+++ b/apps/store/public/locales/sv-se/contact-us.json
@@ -8,5 +8,5 @@
   "FAQ_OPTION_LABEL": "Frågor och svar",
   "FAQ_OPTION_VALUE": "Öppna i ny flik",
   "TELEPHONE_OPTION_LABEL": "Telefonnummer",
-  "TELEPHONE_OPTION_VALUE": "010 45 99 200"
+  "TELEPHONE_OPTION_VALUE": "+46 10 45 99 200"
 }
