--- a/apps/store/public/locales/sv-se/purchase-form.json
+++ b/apps/store/public/locales/sv-se/purchase-form.json
@@ -109,6 +109,12 @@
   "OPEN_PRICE_CALCULATOR_BUTTON": "Se ditt pris",
   "PRESENT_OFFER_EDIT_BUTTON": "Ändra din info",
   "PRICE_CALCULATOR_SECTION_EDIT_BUTTON": "Ändra",
+  "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_HEADER": "Bilen är avställd",
+  "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_MESSAGE": "För att försäkringen ska börja gälla behöver {{regNumber}} vara påställd inom 8 dagar",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_HEADER": "Bilen är avställd och du står inte som ägare",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_MESSAGE": "För att försäkringen ska börja gälla behöver {{regNumber}} vara påställd och du stå som ägare inom 8 dagar",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_HEADER": "Du står inte som ägare",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_MESSAGE": "För att försäkringen ska börja gälla behöver du stå som registrerad ägare för {{regNumber}} inom 8 dagar",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_SUBTITLE": "Vi kunde inte matcha ditt pris. Det kan bero på skillnader i skyddet.",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_TITLE": "Du betalar {{amount}} hos {{company}}",
   "PRICE_MATCH_BUBBLE_SUCCESS_SUBTITLE": "jämfört med {{company}}",
