--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -27,7 +27,8 @@
   "HOME_PAGE_LINK_LABEL": "Hemsidan",
   "LANGUAGE_LABEL_en": "English",
   "LANGUAGE_LABEL_sv": "Svenska",
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste recensioner med kommentarer",
+  "LATEST_REVIEWS_TRUSTPILOT_LABEL": "Visar senaste recensioner för alla Hedvigs försäkringar på Trustpilot.",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste omdömen med kommentarer",
   "LOGIN_BUTTON_TEXT": "Logga in",
   "MONTHLY_PRICE": "{{displayAmount}}/mån",
   "NAVIGATION_STORE_LINK": "Se alla försäkringar",
