ci: update translations from Lokalise

--- a/apps/store/public/locales/en/purchase-form.json
+++ b/apps/store/public/locales/en/purchase-form.json
@@ -109,6 +109,7 @@
   "OPEN_PRICE_CALCULATOR_BUTTON": "See your price",
   "PRESENT_OFFER_EDIT_BUTTON": "Edit your info",
   "PRICE_CALCULATOR_SECTION_EDIT_BUTTON": "Edit",
+  "PRICE_INTENT_WARNING_ACCEPT_BUTTON_LABEL": "I understand",
   "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned",
   "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_MESSAGE": "This car has been decommissioned",
   "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned and you are not the owner of the car",
