--- a/apps/store/public/locales/en/purchase-form.json
+++ b/apps/store/public/locales/en/purchase-form.json
@@ -109,11 +109,13 @@
   "OPEN_PRICE_CALCULATOR_BUTTON": "See your price",
   "PRESENT_OFFER_EDIT_BUTTON": "Edit your info",
   "PRICE_CALCULATOR_SECTION_EDIT_BUTTON": "Edit",
+  "PRICE_INTENT_WARNING_ACCEPT_BUTTON_LABEL": "I understand",
   "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned",
   "PRICE_INTENT_WARNING_CAR_DECOMMISSIONED_MESSAGE": "This car has been decommissioned",
-  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned and you are not the owner of the car",
-  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_MESSAGE": "You are not the owner of this car {{regNumber}} and the car is decommissioned",
-  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_HEADER": "You are not the owner",
+  "PRICE_INTENT_WARNING_EDIT_BUTTON_LABEL": "Edit information",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_HEADER": "Car is decommissioned and you are not the owner",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_AND_CAR_DECOMMISSIONED_MESSAGE": "For the insurance to take effect, {{regNumber}} must be registered, and you must become the registered owner within 8 days.",
+  "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_HEADER": "You are not the registered owner",
   "PRICE_INTENT_WARNING_MEMBER_NOT_CAR_OWNER_MESSAGE": "You are not the owner of this car",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_SUBTITLE": "We could not match your current price",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_TITLE": "You pay {{amount}} at {{company}}",
