--- a/apps/store/public/locales/en/bankid.json
+++ b/apps/store/public/locales/en/bankid.json
@@ -2,6 +2,8 @@
   "BANKID_MODAL_CANCEL": "Cancel",
   "BANKID_MODAL_SUCCESS_PROMPT": "Signing approved",
   "LOGIN_BANKID": "Log in with BankID",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS": "Open the BankID app on your phone and tap Scan QR Code. Point the camera at the QR code to log in.",
+  "LOGIN_BANKID_CANCEL": "Cancel login",
   "LOGIN_BANKID_ERROR": "Failed to log in",
   "LOGIN_BANKID_EXPLANATION": "If you have or had insurance with us, you can log in, and we will retrieve your data automatically.",
   "LOGIN_BANKID_OPEN_APP": "Open BankID on your phone",
