--- a/apps/store/public/locales/sv-se/bankid.json
+++ b/apps/store/public/locales/sv-se/bankid.json
@@ -2,6 +2,8 @@
   "BANKID_MODAL_CANCEL": "Avbryt",
   "BANKID_MODAL_SUCCESS_PROMPT": "Signering godkänd",
   "LOGIN_BANKID": "Logga in med BankID",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS": "Öppna BankID-appen på din telefon och tryck på Skanna QR-kod. Rikta kameran mot QR-koden för att logga in.",
+  "LOGIN_BANKID_CANCEL": "Avbryt inloggning",
   "LOGIN_BANKID_ERROR": "Kunde inte logga in",
   "LOGIN_BANKID_EXPLANATION": "Om du har eller haft en försäkring hos oss kan du logga in, så hämtar vi dina uppgifter automatiskt.",
   "LOGIN_BANKID_OPEN_APP": "Öppna BankID på din telefon",
