styles(BankIdV6Dialog): design tweaks

--- a/apps/store/public/locales/sv-se/bankid.json
+++ b/apps/store/public/locales/sv-se/bankid.json
@@ -2,10 +2,13 @@
   "BANKID_MODAL_CANCEL": "Avbryt",
   "BANKID_MODAL_SUCCESS_PROMPT": "Signering godkänd",
   "LOGIN_BANKID": "Logga in med BankID",
-  "LOGIN_BANKID_AUTHENTICATION_STEPS": "Öppna BankID-appen på din telefon och tryck på Skanna QR-kod. Rikta kameran mot QR-koden för att logga in.",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS_DESKTOP": "Öppna BankID-appen på din telefon och tryck på Skanna QR-kod. Rikta kameran mot QR-koden för att logga in.",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS_MOBILE": "Öppna BankID-appen på din telefon och fyll i din säkerhetskod.",
   "LOGIN_BANKID_CANCEL": "Avbryt inloggning",
   "LOGIN_BANKID_ERROR": "Kunde inte logga in",
   "LOGIN_BANKID_EXPLANATION": "Om du har eller haft en försäkring hos oss kan du logga in, så hämtar vi dina uppgifter automatiskt.",
+  "LOGIN_BANKID_FAIL_DESCRIPTION": "Vi kunde inte logga in dig just nu",
+  "LOGIN_BANKID_FAIL_TITLE": "Tyvärr, något gick fel",
   "LOGIN_BANKID_OPEN_APP": "Öppna BankID på din telefon",
   "LOGIN_BANKID_SKIP": "Hoppa över",
   "LOGIN_BANKID_SUCCESS": "Identifierad framgångsrikt",
