--- a/apps/store/public/locales/en/bankid.json
+++ b/apps/store/public/locales/en/bankid.json
@@ -2,10 +2,13 @@
   "BANKID_MODAL_CANCEL": "Cancel",
   "BANKID_MODAL_SUCCESS_PROMPT": "Signing approved",
   "LOGIN_BANKID": "Log in with BankID",
-  "LOGIN_BANKID_AUTHENTICATION_STEPS": "Open the BankID app on your phone and tap Scan QR Code. Point the camera at the QR code to log in.",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS_DESKTOP": "Open the BankID app on your phone and tap Scan QR Code. Point the camera at the QR code to log in.",
+  "LOGIN_BANKID_AUTHENTICATION_STEPS_MOBILE": "Open the BankID app on your phone and enter your security code.",
   "LOGIN_BANKID_CANCEL": "Cancel login",
   "LOGIN_BANKID_ERROR": "Failed to log in",
   "LOGIN_BANKID_EXPLANATION": "If you have or had insurance with us, you can log in, and we will retrieve your data automatically.",
+  "LOGIN_BANKID_FAIL_DESCRIPTION": "We could not log you in right now",
+  "LOGIN_BANKID_FAIL_TITLE": "Sorry, something went wrong",
   "LOGIN_BANKID_OPEN_APP": "Open BankID on your phone",
   "LOGIN_BANKID_SKIP": "Skip",
   "LOGIN_BANKID_SUCCESS": "Identified successfully",
