--- a/apps/store/public/locales/sv-se/reviews.json
+++ b/apps/store/public/locales/sv-se/reviews.json
@@ -1,4 +1,7 @@
 {
+  "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
+  "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
+  "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
   "REVIEWS_DISCLAIMER_one": "Visar genomsnittet av {{reviewsCount}} omdöme från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme.",
   "REVIEWS_DISCLAIMER_other": "Visar genomsnittet av {{reviewsCount}} omdömen från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme.",
   "VIEW_REVIEWS_LABEL": "Visa omdömen"
