--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -56,5 +56,6 @@
   "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
   "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen.",
-  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund"
+  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund",
+  "VIEW_REVIEWS_LABEL": "Visa omdömen"
 }
