feat(AverageRatingBanner): use real data

--- a/apps/store/public/locales/sv-se/reviews.json
+++ b/apps/store/public/locales/sv-se/reviews.json
@@ -2,8 +2,8 @@
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
-  "REVIEWS_DISCLAIMER_one": "Visar genomsnittet av {{reviewsCount}} omdöme från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme.",
-  "REVIEWS_DISCLAIMER_other": "Visar genomsnittet av {{reviewsCount}} omdömen från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme.",
+  "REVIEWS_DISCLAIMER_one": "Visar genomsnittet av {{reviewsCount}} omdöme från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme. [[Läs mer]]",
+  "REVIEWS_DISCLAIMER_other": "Visar genomsnittet av {{reviewsCount}} omdömen från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme. [[Läs mer]]",
   "SE_ACCIDENT_REVIEW_COMMENT_TAG": "Olycksfall",
   "SE_APARTMENT_BRF_REVIEW_COMMENT_TAG": "Bostadsrätt",
   "SE_APARTMENT_RENT_REVIEW_COMMENT_TAG": "Hyresrätt",
