--- a/apps/store/public/locales/en/reviews.json
+++ b/apps/store/public/locales/en/reviews.json
@@ -2,8 +2,8 @@
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} review",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} reviews",
-  "REVIEWS_DISCLAIMER_one": "Shows the average of {{reviewsCount}} review from our customers. Anyone who has had an injury is invited to leave a review.",
-  "REVIEWS_DISCLAIMER_other": "Shows the average of {{reviewsCount}} reviews from our customers. Anyone who has had an injury is invited to leave a review.",
+  "REVIEWS_DISCLAIMER_one": "Shows the average of {{reviewsCount}} review from our customers. Anyone who has had an injury is invited to leave a review. [[Read more]]",
+  "REVIEWS_DISCLAIMER_other": "Shows the average of {{reviewsCount}} reviews from our customers. Anyone who has had an claim is invited to leave a review. [[Read more]]",
   "SE_ACCIDENT_REVIEW_COMMENT_TAG": "Accident",
   "SE_APARTMENT_BRF_REVIEW_COMMENT_TAG": "Homeowner",
   "SE_APARTMENT_RENT_REVIEW_COMMENT_TAG": "Rental",
