refact: product reviews post release cleanup - remove old implementation files

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -30,8 +30,7 @@
   "LANGUAGE_LABEL_en": "English",
   "LANGUAGE_LABEL_no": "Norwegian",
   "LANGUAGE_LABEL_sv": "Swedish",
-  "LATEST_REVIEWS_TRUSTPILOT_LABEL": "Shows the latest reviews for all Hedvig's insurances on Trustpilot.",
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows latest reviews with comments",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows comments from the latest reviews. All customer who have had a claim is invited to leave a review.",
   "LOGIN_BUTTON_TEXT": "Log in",
   "MONTHLY_PRICE": "{{displayAmount}}/mo.",
   "NAVIGATION_STORE_LINK": "Browse all insurances",
@@ -45,20 +44,11 @@
   "PAYMENT_CONNECT_SUCCESS": "Success! You can close this page now :)",
   "PAYMENT_CONNECT_TITLE": "Connect direct debit",
   "PRODUCT_REVIEWS_DISCLAIMER": "These reviews have been collected through invitation to members who have had a claim with Hedvig",
-  "PRODUCT_REVIEWS_TAB_LABEL": "Reviews ({{score}})",
-  "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
-  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Based on {{reviewsCount}} review",
-  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Based on {{reviewsCount}} reviews",
-  "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} review",
-  "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} reviews",
-  "REVIEW_COMMENTS_READ_MORE": "Read more",
   "SELECT_INSURANCE": "Select insurance",
   "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "Trustpilot is open to everyone and cannot verify that only Hedvig's members leave reviews.",
   "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} of 5",
-  "UNKNOWN_ERROR_MESSAGE": "Something went wrong, please try again.",
-  "VERIFIED_CUSTOMER_LABEL": "Verified customer",
-  "VIEW_REVIEWS_LABEL": "View reviews"
+  "UNKNOWN_ERROR_MESSAGE": "Something went wrong, please try again."
 }
