--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -27,8 +27,7 @@
   "HOME_PAGE_LINK_LABEL": "Hemsidan",
   "LANGUAGE_LABEL_en": "English",
   "LANGUAGE_LABEL_sv": "Svenska",
-  "LATEST_REVIEWS_TRUSTPILOT_LABEL": "Visar senaste recensioner för alla Hedvigs försäkringar på Trustpilot.",
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste omdömen med kommentarer",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar kommentarer från senaste omdömen. Alla kunder som haft ett skadeärende blir inbjuden till att lämna ett omdöme.",
   "LOGIN_BUTTON_TEXT": "Logga in",
   "MONTHLY_PRICE": "{{displayAmount}}/mån",
   "NAVIGATION_STORE_LINK": "Se alla försäkringar",
@@ -42,20 +41,11 @@
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
   "PRODUCT_REVIEWS_DISCLAIMER": "Dessa omdömen har samlats in via inbjudan till alla medlemmar som haft ett skadeärende hos Hedvig.",
-  "PRODUCT_REVIEWS_TAB_LABEL": "Omdömen ({{score}})",
-  "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "READ_MORE": "Läs mer",
-  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Baserat på {{reviewsCount}} omdöme",
-  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Baserat på {{reviewsCount}} omdömen",
-  "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
-  "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
-  "REVIEW_COMMENTS_READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} omdömen",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "Trustpilot är öppen för alla och kan inte säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
   "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
-  "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen.",
-  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund",
-  "VIEW_REVIEWS_LABEL": "Visa omdömen"
+  "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen."
 }
