--- a/apps/store/public/locales/en/carDealership.json
+++ b/apps/store/public/locales/en/carDealership.json
@@ -7,8 +7,8 @@
   "EXTENSION_COST_EXPLANATION": "active from {{date}}",
   "EXTENSION_TITLE": "Extension",
   "INITIAL_OFFER_HEADING": "Your initial offer",
-  "MY_MONEY_CONSENT_BODY": "Add english copy",
-  "MY_MONEY_CONSENT_HEADING": "Contact me about financing for my car",
+  "MY_MONEY_CONSENT_BODY": "I consent to Hedvig AB sharing my details (name, social security number, email, address, telephone number, registration number, and insurance contract date) with their partner, Sambla Group AB. The purpose is for Sambla Group AB to be able to contact me via phone/email/SMS with offers for their services, such as car financing. I also understand that this means Sambla Group AB will need to process these details about me in order to contact me with such offers. You can withdraw your consent at any time. Read more about the processing of personal data in Hedvig AB’s privacy policy and Sambla Group AB’s privacy policy. There, you will also find information on how to withdraw your consents.",
+  "MY_MONEY_CONSENT_HEADING": "I want to be contacted by Sambla to compare or renegotiate my existing loans",
   "NOTICE_TOAST_CONTENT": "Don't want to take this offer? [[Cancel it here]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Cancel",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Yes, go ahead",
