--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -7,7 +7,8 @@
   "EXTENSION_COST_EXPLANATION": "gäller från {{date}}",
   "EXTENSION_TITLE": "Förlängning",
   "INITIAL_OFFER_HEADING": "Ditt starterbjudande",
-  "MY_MONEY_CONSENT_BODY": "Jag samtycker till att Hedvig AB delar mina uppgifter (namn, personnummer, e-post, adress, telefonnummer, registreringsnummer och försäkringsavtalsdatum) med sin samarbetspartner Sambla Group AB. Syftet är att Sambla Group AB kan kontakta mig via telefon/email/sms med erbjudanden om deras tjänster, exempelvis bilfinansiering. Jag är även införstådd med att detta innebär att Sambla Group AB behöver behandla dessa uppgifter om mig för att kunna kontakta mig med sådana erbjudanden. Du kan när som helst återkalla ditt samtycke. Läs mer om personuppgiftsbehandlingen i Hedvig AB’s personuppgiftspolicy respektive Sambla Group AB’s dataskyddspolicy. Där hittar du även information om hur du kan återkalla dina samtycken.",
+  "MY_MONEY_CONSENT_BODY": "Jag samtycker till att Hedvig AB delar mina uppgifter (namn, personnummer, e-post, adress, telefonnummer, registreringsnummer och försäkringsavtalsdatum) med sin samarbetspartner Sambla Group AB.",
+  "MY_MONEY_CONSENT_BODY_COLLAPSED": "Syftet är att Sambla Group AB kan kontakta mig via telefon/email/sms med erbjudanden om deras tjänster, exempelvis bilfinansiering. Jag är även införstådd med att detta innebär att Sambla Group AB behöver behandla dessa uppgifter om mig för att kunna kontakta mig med sådana erbjudanden. Du kan när som helst återkalla ditt samtycke. Läs mer om personuppgiftsbehandlingen i Hedvig AB’s personuppgiftspolicy respektive Sambla Group AB’s dataskyddspolicy. Där hittar du även information om hur du kan återkalla dina samtycken.",
   "MY_MONEY_CONSENT_HEADING": "Jag vill bli kontaktad av Sambla för att jämföra eller omförhandla mina befintliga lån",
   "NOTICE_TOAST_CONTENT": "Vill du inte ta del av starterbjudandet? [[Avsluta erbjudandet här]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Avbryt",
