styles(product-reviews): general UI tweaks

--- a/apps/store/public/locales/sv-se/reviews.json
+++ b/apps/store/public/locales/sv-se/reviews.json
@@ -1,11 +1,12 @@
 {
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar kommentarer från senaste omdömen. Alla kunder som haft ett skadeärende blir inbjuden till att lämna ett omdöme.",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste kommentarer för betygsskalan",
   "NO_REVIEWS_LABEL": "Inga kommentarer har lämnats",
+  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Visar genomsnittet av omdömen från våra kunder. Alla som haft en skada får ett mejl med inbjudan till att lämna omdöme. [[Läs mer]]",
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
-  "REVIEWS_DISCLAIMER_one": "Visar genomsnittet av {{reviewsCount}} omdöme från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme. [[Läs mer]]",
-  "REVIEWS_DISCLAIMER_other": "Visar genomsnittet av {{reviewsCount}} omdömen från våra kunder. Alla som haft en skada blir inbjuden till att lämna ett omdöme. [[Läs mer]]",
+  "REVIEWS_DISCLAIMER_one": "Visar genomsnittet av {{reviewsCount}} omdöme från våra kunder. Alla som haft en skada får ett mejl med inbjudan till att lämna omdöme. [[Läs mer]]",
+  "REVIEWS_DISCLAIMER_other": "Visar genomsnittet av {{reviewsCount}} omdömen från våra kunder. Alla som haft en skada får ett mejl med inbjudan till att lämna omdöme. [[Läs mer]]",
   "SE_ACCIDENT_REVIEW_COMMENT_TAG": "Olycksfall",
   "SE_APARTMENT_BRF_REVIEW_COMMENT_TAG": "Bostadsrätt",
   "SE_APARTMENT_RENT_REVIEW_COMMENT_TAG": "Hyresrätt",
