--- a/apps/store/public/locales/en/reviews.json
+++ b/apps/store/public/locales/en/reviews.json
@@ -1,11 +1,12 @@
 {
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows comments from the latest reviews. All customer who have had a claim is invited to leave a review.",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows comments from the latest reviews",
   "NO_REVIEWS_LABEL": "No comments have been left",
+  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Shows the average of reviews from our customers. Anyone who's had a claim is invited by email to leave a review. [[Read more]]",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} review",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} reviews",
-  "REVIEWS_DISCLAIMER_one": "Shows the average of {{reviewsCount}} review from our customers. Anyone who has had an injury is invited to leave a review. [[Read more]]",
-  "REVIEWS_DISCLAIMER_other": "Shows the average of {{reviewsCount}} reviews from our customers. Anyone who's had a claim is invited to leave a review. [[Read more]]",
+  "REVIEWS_DISCLAIMER_one": "Shows the average of {{reviewsCount}} review from our customers. Anyone who's had a claim is invited by email to leave a review. [[Read more]]",
+  "REVIEWS_DISCLAIMER_other": "Shows the average of {{reviewsCount}} reviews from our customers. Anyone who's had a claim is invited by email to leave a review. [[Read more]]",
   "SE_ACCIDENT_REVIEW_COMMENT_TAG": "Accident",
   "SE_APARTMENT_BRF_REVIEW_COMMENT_TAG": "Homeowner",
   "SE_APARTMENT_RENT_REVIEW_COMMENT_TAG": "Rental",
