--- a/apps/store/public/locales/en/reviews.json
+++ b/apps/store/public/locales/en/reviews.json
@@ -1,7 +1,7 @@
 {
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows comments from the latest reviews",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows comments from latest reviews",
   "NO_REVIEWS_LABEL": "No comments have been left",
-  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Shows the average of reviews from our customers. Anyone who's had a claim is invited by email to leave a review. [[Read more]]",
+  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Our average customer ratings. Anyone who's had a claim is invited by email to leave reviews.",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} review",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} reviews",
