--- a/apps/store/public/locales/sv-se/reviews.json
+++ b/apps/store/public/locales/sv-se/reviews.json
@@ -1,7 +1,7 @@
 {
-  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste kommentarer för betygsskalan",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Senaste kommentarer från omdömen",
   "NO_REVIEWS_LABEL": "Inga kommentarer har lämnats",
-  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Visar genomsnittet av omdömen från våra kunder. Alla som haft en skada får ett mejl med inbjudan till att lämna omdöme. [[Läs mer]]",
+  "PILLOW_HEADER_REVIEWS_DISCLAIMER": "Visar genomsnittet av omdömen från våra kunder. Alla som haft en skada får en inbjudan via mejl till att lämna ett omdöme.",
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "REVIEWS_COUNT_LABEL_one": "{{reviewsCount}} omdöme",
   "REVIEWS_COUNT_LABEL_other": "{{reviewsCount}} omdömen",
