--- a/apps/store/public/locales/sv-se/bankid.json
+++ b/apps/store/public/locales/sv-se/bankid.json
@@ -1,10 +1,10 @@
 {
+  "BANKID_CANCEL": "Avbryt",
   "BANKID_MODAL_CANCEL": "Avbryt",
   "BANKID_MODAL_SUCCESS_PROMPT": "Signering godkänd",
   "LOGIN_BANKID": "Logga in med BankID",
   "LOGIN_BANKID_AUTHENTICATION_STEPS_DESKTOP": "Öppna BankID-appen på din telefon och tryck på Skanna QR-kod. Rikta kameran mot QR-koden för att logga in.",
   "LOGIN_BANKID_AUTHENTICATION_STEPS_MOBILE": "Öppna BankID-appen på din telefon och fyll i din säkerhetskod.",
-  "LOGIN_BANKID_CANCEL": "Avbryt inloggning",
   "LOGIN_BANKID_ERROR": "Kunde inte logga in",
   "LOGIN_BANKID_EXPLANATION": "Om du har eller haft en försäkring hos oss kan du logga in, så hämtar vi dina uppgifter automatiskt.",
   "LOGIN_BANKID_FAIL_DESCRIPTION": "Vi kunde inte logga in dig just nu",
@@ -14,6 +14,8 @@
   "LOGIN_BANKID_SUCCESS": "Identifierad framgångsrikt",
   "LOGIN_BANKID_TRY_AGAIN": "Försök igen",
   "LOGIN_BANKID_WAITING": "Väntar på BankID...",
+  "NO_MOBILE_BANKID_LINK_LABEL": "Öppna BankID på den här enheten",
+  "NO_MOBILE_BANKID_TITLE": "Har du inte Mobilt BankID?",
   "QR_CODE_READ_SUBTITLE": "Följ instruktionerna i BankID-appen",
   "QR_CODE_READ_TITLE": "Fyll i din säkerhetskod"
 }
