--- a/apps/store/public/locales/sv-se/bankid.json
+++ b/apps/store/public/locales/sv-se/bankid.json
@@ -17,5 +17,6 @@
   "NO_MOBILE_BANKID_LINK_LABEL": "Öppna BankID på den här enheten",
   "NO_MOBILE_BANKID_TITLE": "Har du inte Mobilt BankID?",
   "QR_CODE_READ_SUBTITLE": "Följ instruktionerna i BankID-appen",
-  "QR_CODE_READ_TITLE": "Fyll i din säkerhetskod"
+  "QR_CODE_READ_TITLE": "Fyll i din säkerhetskod",
+  "SIGN_BANKID": "Signera med BankID"
 }
