fix(BankIdV6Dialog): added missing "fail to sign" copy

--- a/apps/store/public/locales/en/bankid.json
+++ b/apps/store/public/locales/en/bankid.json
@@ -18,5 +18,6 @@
   "NO_MOBILE_BANKID_TITLE": "Don't have Mobile BankID?",
   "QR_CODE_READ_SUBTITLE": "Follow the instructions in the BankID app",
   "QR_CODE_READ_TITLE": "Enter your security code",
-  "SIGN_BANKID": "Sign with BankID"
+  "SIGN_BANKID": "Sign with BankID",
+  "SIGN_BANKID_ERROR": "Failed to sign"
 }
