--- a/apps/store/public/locales/sv-se/bankid.json
+++ b/apps/store/public/locales/sv-se/bankid.json
@@ -18,5 +18,6 @@
   "NO_MOBILE_BANKID_TITLE": "Har du inte Mobilt BankID?",
   "QR_CODE_READ_SUBTITLE": "Följ instruktionerna i BankID-appen",
   "QR_CODE_READ_TITLE": "Fyll i din säkerhetskod",
-  "SIGN_BANKID": "Signera med BankID"
+  "SIGN_BANKID": "Signera med BankID",
+  "SIGN_BANKID_ERROR": "Kunde inte sig"
 }
