--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -1,7 +1,6 @@
 {
   "ACCIDENT_OFFER_DESCRIPTION": "Up to 1 million SEK in compensation for injuries and lost working ability in the event of an accident. No deductible.",
   "ACCIDENT_OFFER_DESCRIPTION_BUNDLE": "Upgrade your coverage with an Accident insurance. Get compensated for dental, scars and much more. ",
-  "ACCIDENT_OFFER_PRICE_LABEL": "Your offer:",
   "ACCIDENT_OFFER_USP_1": "Extra coverage for injuries and accidents",
   "ACCIDENT_OFFER_USP_2": "Up to 1 million SEK in compensation",
   "ACCIDENT_OFFER_USP_3": "Valid worldwide, no deductible",
@@ -58,6 +57,7 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
   "EXPOSURE_LABEL": "Valid for",
   "GO_TO_STORE_BUTTON": "Browse our insurances",
+  "OFFER_PRICE_LABEL": "Your offer:",
   "QUICK_ADD_BADGE_LABEL": "Popular",
   "QUICK_ADD_BUTTON": "Add",
   "QUICK_ADD_BUTTON_BUNDLE": "Upgrade",
