--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -1,9 +1,8 @@
 {
   "ACCIDENT_OFFER_DESCRIPTION": "Få upp till 1 miljon kronor i ersättning för skador och förlorad arbetsförmåga vid olycka. Ingen självrisk.",
   "ACCIDENT_OFFER_DESCRIPTION_BUNDLE": "Uppgradera ditt skydd med olycksfallsförsäkring. Få ersättning för olyckor, tandskador, ärr och mycket mer. ",
-  "ACCIDENT_OFFER_PRICE_LABEL": "Ditt erbjudande:",
   "ACCIDENT_OFFER_USP_1": "Extra skydd för skador efter olyckor",
-  "ACCIDENT_OFFER_USP_2": "Upp till 1 000 000kr i ersättning",
+  "ACCIDENT_OFFER_USP_2": "Upp till 1 000 000 kr i ersättning",
   "ACCIDENT_OFFER_USP_3": "Gäller i hela världen, utan självrisk",
   "ADD_TO_CART_BUTTON_LABEL": "Lägg i varukorgen",
   "BACK_BUTTON": "Tillbaka",
@@ -58,6 +57,7 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
   "EXPOSURE_LABEL": "Giltlig för",
   "GO_TO_STORE_BUTTON": "Se våra försäkringar",
+  "OFFER_PRICE_LABEL": "Ditt erbjudande:",
   "QUICK_ADD_BADGE_LABEL": "Populärt",
   "QUICK_ADD_BUTTON": "Lägg till",
   "QUICK_ADD_BUTTON_BUNDLE": "Uppgradera",
