--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -57,6 +57,10 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
   "EXPOSURE_LABEL": "Valid for",
   "GO_TO_STORE_BUTTON": "Browse our insurances",
+  "NUMBER_COINSURED_INPUT_LABEL": "Insured people",
+  "NUMBER_COINSURED_OPTION_LABEL_one": "You + {{count}}",
+  "NUMBER_COINSURED_OPTION_LABEL_other": "You + {{count}}",
+  "NUMBER_COINSURED_OPTION_LABEL_zero": "You",
   "OFFER_PRICE_LABEL": "Your offer:",
   "QUICK_ADD_BADGE_LABEL": "Popular",
   "QUICK_ADD_BUTTON": "Add",
@@ -72,5 +76,7 @@
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Cancel",
   "REMOVE_ENTRY_MODAL_CONFIRM_BUTTON": "Yes, remove",
   "REMOVE_ENTRY_MODAL_PROMPT": "Are you sure you want to remove {{name}}?",
+  "START_DATE_LABEL": "Start date",
+  "USP_NO_BINDING_TIME": "No binding time",
   "VIEW_ENTRY_DETAILS_BUTTON": "Details"
 }
