--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -57,6 +57,10 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
   "EXPOSURE_LABEL": "Giltlig för",
   "GO_TO_STORE_BUTTON": "Se våra försäkringar",
+  "NUMBER_COINSURED_INPUT_LABEL": "Försäkrade personer",
+  "NUMBER_COINSURED_OPTION_LABEL_one": "Du + {{count}}",
+  "NUMBER_COINSURED_OPTION_LABEL_other": "Du + {{count}}",
+  "NUMBER_COINSURED_OPTION_LABEL_zero": "Du",
   "OFFER_PRICE_LABEL": "Ditt erbjudande:",
   "QUICK_ADD_BADGE_LABEL": "Populärt",
   "QUICK_ADD_BUTTON": "Lägg till",
@@ -72,5 +76,7 @@
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Avbryt",
   "REMOVE_ENTRY_MODAL_CONFIRM_BUTTON": "Ja, ta bort",
   "REMOVE_ENTRY_MODAL_PROMPT": "Är du säker på att du vill ta bort {{name}}?",
+  "START_DATE_LABEL": "Startdatum",
+  "USP_NO_BINDING_TIME": "Ingen bindningstid",
   "VIEW_ENTRY_DETAILS_BUTTON": "Detaljer"
 }
